--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "node"
   ],
   "author": "keithwahhhhhhhh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
+  }
 }
